[SQUASH] drivers: Backport zram/zswap and LZ4 from Linux 4.18
* From https://github.com/dev-harsh1998/kernel_lenovo_msm8916/tree/a6000-zram-4.18

commit b3b6b4dcf1ef2d5b8c4d714db0a1b00f24453632
Author: Remilia Scarlet <remilia.1505@gmail.com>
Date:   Wed Apr 25 18:36:46 2018 +0700

    zswap: Use zsmalloc as default storage pool

    Like Sammy does with their zswap

    Signed-off-by: Remilia Scarlet <remilia.1505@gmail.com>
    Signed-off-by: dev-harsh1998 <dev-harsh1998@hotmail.com>

commit 42d064ec22821da1fc4a375ea8bb7a0f15664438
Author: Dan Streetman <ddstreet@ieee.org>
Date:   Fri Feb 3 13:13:09 2017 -0800

    zswap: disable changing params if init fails

    Add zswap_init_failed bool that prevents changing any of the module
    params, if init_zswap() fails, and set zswap_enabled to false.  Change
    'enabled' param to a callback, and check zswap_init_failed before
    allowing any change to 'enabled', 'zpool', or 'compressor' params.

    Any driver that is built-in to the kernel will not be unloaded if its
    init function returns error, and its module params remain accessible for
    users to change via sysfs.  Since zswap uses param callbacks, which
    assume that zswap has been initialized, changing the zswap params after
    a failed initialization will result in WARNING due to the param
    callbacks expecting a pool to already exist.  This prevents that by
    immediately exiting any of the param callbacks if initialization failed.

    This was reported here:
      https://marc.info/?l=linux-mm&m=147004228125528&w=4

    And fixes this WARNING:
      [  429.723476] WARNING: CPU: 0 PID: 5140 at mm/zswap.c:503 __zswap_pool_current+0x56/0x60

    The warning is just noise, and not serious.  However, when init fails,
    zswap frees all its percpu dstmem pages and its kmem cache.  The kmem
    cache might be serious, if kmem_cache_alloc(NULL, gfp) has problems; but
    the percpu dstmem pages are definitely a problem, as they're used as
    temporar

--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -541,7 +541,7 @@ config ZSWAP
 	bool "Compressed cache for swap pages (EXPERIMENTAL)"
 	depends on FRONTSWAP && CRYPTO=y
 	select CRYPTO_LZO
-	select ZBUD
+	select ZPOOL
 	default n
 	help
 	  A lightweight compressed cache for swap pages.  It takes
@@ -592,16 +592,6 @@ config ZPOOL
 	  Compressed memory storage API.  This allows using either zbud or
 	  zsmalloc.
 
-config ZBUD
-	tristate "Low density storage for compressed pages"
-	default n
-	help
-	  A special purpose allocator for storing compressed pages.
-	  It is designed to store up to two compressed pages per physical
-	  page.  While this design limits storage density, it has simple and
-	  deterministic reclaim properties that make it preferable to a higher
-	  density approach when reclaim will be used.
-
 config ZSMALLOC
 	bool "Memory allocator for compressed pages"
 	depends on MMU
@@ -624,8 +614,28 @@ config PGTABLE_MAPPING
 	  then you should select this. This causes zsmalloc to use page table
 	  mapping rather than copying for object mapping.
 
-	  You can check speed with zsmalloc benchmark[1].
-	  [1] https://github.com/spartacus06/zsmalloc.
+	  You can check speed with zsmalloc benchmark:
+	  https://github.com/spartacus06/zsmapbench
+
+config ZSMALLOC_STAT
+	bool "Export zsmalloc statistics"
+	depends on ZSMALLOC
+	select DEBUG_FS
+	help
+	  This option enables code in the zsmalloc to collect various
+	  statistics about whats happening in zsmalloc and exports that
+	  information to userspace via debugfs.
+	  If unsure, say N.
+
+config ZBUD
+	tristate "Low density storage for compressed pages"
+	default n
+	help
+	  A special purpose allocator for storing compressed pages.
+	  It is designed to store up to two compressed pages per physical
+	  page.  While this design limits storage density, it has simple and
+	  deterministic reclaim properties that make it preferable to a higher
+	  density approach when reclaim will be used.
 
 config VM_MAX_READAHEAD
 	int "default max readahead window size"
@@ -634,3 +644,11 @@ config VM_MAX_READAHEAD
 	  This sets the VM_MAX_READAHEAD value to allow the readahead window
 	  to grow to a maximum size of configured. This will benefit sequential
 	  read throughput and thus early boot performance.
+
+config KSM_THREAD_SLEEPMS
+	int "default ms range when ksm should sleep between batches"
+	default 20
+	help
+	  This sets the default milliseconds range when ksm should sleep between
+	  batches. The implementatiion of this config is done to provide a window
+	  configurable via defconfig. If left untouched it defaults to stock 20ms.
