lettuce: defconfig: Enable zswap, zpool, zbud and LZ4
Signed-off-by: Remilia Scarlet <remilia.1505@gmail.com>

--- a/arch/arm64/configs/reborn_lettuce_defconfig
+++ b/arch/arm64/configs/reborn_lettuce_defconfig
@@ -52,6 +52,9 @@ CONFIG_ARMV7_COMPAT=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_ZSMALLOC=y
+CONFIG_FRONTSWAP=y
+CONFIG_ZPOOL=y
+CONFIG_ZBUD=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_KSM=y
 CONFIG_UKSM=y
@@ -227,8 +230,13 @@ CONFIG_CMA=y
 CONFIG_CMA_SIZE_MBYTES=8
 CONFIG_PROC_DEVICETREE=y
 CONFIG_ZRAM=y
-CONFIG_ZRAM_LZ4_COMPRESS=y
-CONFIG_SWAP=y
+CONFIG_ZSWAP=y
+CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_LZ4HC=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4HC_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+CONFIG_DECOMPRESS_LZ4=y
 CONFIG_CGROUP_MEM_RES_CTLR=y
 CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
 CONFIG_BLK_DEV_LOOP=y
