--- a/arch/arm64/configs/reborn_lettuce_defconfig
+++ b/arch/arm64/configs/reborn_lettuce_defconfig
@@ -33,6 +33,8 @@ CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_CFQ=y
+CONFIG_DEFAULT_CFQ=y
 CONFIG_IOSCHED_SWITCHER=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_DEFAULT_NOOP=y
