--- a/arch/arm64/configs/reborn_lettuce_defconfig
+++ b/arch/arm64/configs/reborn_lettuce_defconfig
@@ -23,6 +23,8 @@ CONFIG_RD_LZMA=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
 # CONFIG_PCI_QUIRKS is not set
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
