--- a/arch/arm64/configs/reborn_lettuce_defconfig
+++ b/arch/arm64/configs/reborn_lettuce_defconfig
@@ -54,6 +54,7 @@ CONFIG_PROCESS_RECLAIM=y
 CONFIG_ZSMALLOC=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_KSM=y
+CONFIG_UKSM=y
 CONFIG_SECCOMP=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
