--- a/arch/arm64/configs/reborn_lettuce_defconfig
+++ b/arch/arm64/configs/reborn_lettuce_defconfig
@@ -376,6 +376,7 @@ CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_MFD_ARIZONA_I2C=y
 CONFIG_MFD_VEGAS=y
 CONFIG_WCD9335_CODEC=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
