--- a/arch/arm64/configs/reborn_lettuce_defconfig
+++ b/arch/arm64/configs/reborn_lettuce_defconfig
@@ -55,6 +55,7 @@ CONFIG_ZPOOL=y
 CONFIG_ZBUD=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_KSM=y
+CONFIG_STATE_NOTIFIER=y
 CONFIG_SECCOMP=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
