Revert "ARM: dts: msm8916: Use dynamic fps for all panels"
* Causing random reboots and lags.

This reverts commit 5caa5fac56531c5fe831f9dc28e058ec560d65b7.

--- a/arch/arm/boot/dts/qcom/msm8916-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8916-cdp.dtsi
@@ -478,8 +478,7 @@
 	qcom,mdss-dsi-bl-pmic-pwm-frequency = <100>;
 	qcom,mdss-dsi-bl-pmic-bank-select = <0>;
 	qcom,mdss-dsi-pwm-gpio = <&pm8916_mpps 4 0>;
-	qcom,mdss-dsi-pan-enable-dynamic-fps;
-	qcom,mdss-dsi-pan-fps-update = "dfps_immediate_porch_mode";
+	qcom,cont-splash-enabled;
 };
 
 &dsi_nt35590_720_vid {
@@ -487,9 +486,8 @@
 	qcom,mdss-dsi-bl-pmic-pwm-frequency = <100>;
 	qcom,mdss-dsi-bl-pmic-bank-select = <0>;
 	qcom,mdss-dsi-pwm-gpio = <&pm8916_mpps 4 0>;
+	qcom,cont-splash-enabled;
 	qcom,esd-check-enabled;
-	qcom,mdss-dsi-pan-enable-dynamic-fps;
-	qcom,mdss-dsi-pan-fps-update = "dfps_immediate_porch_mode";
 };
 
 &dsi_nt35590_720_cmd {
@@ -497,6 +495,7 @@
 	qcom,mdss-dsi-bl-pmic-pwm-frequency = <100>;
 	qcom,mdss-dsi-bl-pmic-bank-select = <0>;
 	qcom,mdss-dsi-pwm-gpio = <&pm8916_mpps 4 0>;
+	qcom,cont-splash-enabled;
 	qcom,esd-check-enabled;
 };
 
@@ -505,8 +504,7 @@
 	qcom,mdss-dsi-bl-pmic-pwm-frequency = <100>;
 	qcom,mdss-dsi-bl-pmic-bank-select = <0>;
 	qcom,mdss-dsi-pwm-gpio = <&pm8916_mpps 4 0>;
-	qcom,mdss-dsi-pan-enable-dynamic-fps;
-	qcom,mdss-dsi-pan-fps-update = "dfps_immediate_porch_mode";
+	qcom,cont-splash-enabled;
 };
 
 &pmx_mdss {
